--- a/ProyFinal_DB_POO/Properties/Resources.resx
+++ b/ProyFinal_DB_POO/Properties/Resources.resx
@@ -124,11 +124,17 @@
   <data name="botonHacerCita" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonHacerCita.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dosis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dosis.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="botonVerificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonVerificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="botonLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonLog.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="calendario" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calendario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="botonPDF" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonPDF1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -138,5 +144,14 @@
   </data>
   <data name="WhatsApp Image 2021-06-25 at 6.47.05 PM (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WhatsApp Image 2021-06-25 at 6.47.05 PM (1).jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="reloj" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reloj.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="persona2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\persona2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logoGobierno" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoGobierno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
